tdf#95824: Crash: when opening Function Wizard

Regression from http://cgit.freedesktop.org/libreoffice/core/commit/?id=ccde2360d5c29bb99008cfae5ab3675bee4ca46c
Let's just initialize m_pDoc in ctor

Change-Id: I4fe0f8eff5439b3150c90ac14343aaf8e0a4e43e
Reviewed-on: https://gerrit.libreoffice.org/20004
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>